<resources>
    <string name="app_name">MaterialDesign</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="favourite">favourite</string>
    <string name="settings">settings</string>
    <string name="search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_2_days_ago">2 Days Ago</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="set_theme">Set Theme</string>
    <string name="bee_theme">Bee Theme</string>
    <string name="default_theme">Default Theme</string>
    <string name="todo">TODO</string>
</resources>