<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/wiki_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:paddingTop="16dp"
                android:layout_marginBottom="10dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/input_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/input_layout"
                app:srcCompat="@drawable/ic_wikipedia" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/search_wiki"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:endIconCheckable="true"
                app:endIconDrawable="@drawable/ic_wikipedia"
                app:endIconMode="custom"
                app:helperText="@string/wiki_helper_text"
                app:boxCornerRadiusBottomEnd="20sp"
                app:boxCornerRadiusBottomStart="20sp"
                app:boxCornerRadiusTopEnd="20sp"
                app:boxCornerRadiusTopStart="20sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/picture_choose_chips"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:visibility="visible"
                android:alpha="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/picture_choose_chips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:singleSelection="true"
                app:layout_constraintTop_toBottomOf="@id/input_layout">

                <com.google.android.material.chip.Chip
                    android:id="@+id/todayChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/today" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/yesterdayChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipSpacingHorizontal="40dp"
                    android:text="@string/yesterday" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/DaysAgoChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2_days_ago" />
            </com.google.android.material.chip.ChipGroup>
            <com.meeweel.materialdesign.util.EquilateralImageView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="visible"
                android:contentDescription="@string/photo_of_the_day_stub"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/picture_choose_chips"
                app:srcCompat="@drawable/ic_no_photo_vector" />


        </androidx.constraintlayout.motion.widget.MotionLayout>
    </androidx.core.widget.NestedScrollView>

    <include layout="@layout/bottom_sheet_layout" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:fabAlignmentMode="center"
        app:hideOnScroll="true"
        app:layout_scrollFlags="scroll|enterAlways"
        app:navigationIcon="@drawable/ic_hamburger_menu_bottom_bar" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/bottom_app_bar"
        app:srcCompat="@drawable/ic_plus_fab"
        app:tint="#FFFFFF" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>

