<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layoutDescription="@xml/set_theme_motion">

    <TextView
        android:id="@+id/text_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_theme"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/switcher"/>
    <Switch
        android:id="@+id/switcher"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_default"
        app:layout_constraintEnd_toStartOf="@id/text_bee"
        tools:ignore="UseSwitchCompatOrMaterialXml" />
    <TextView
        android:id="@+id/text_bee"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bee_theme"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/switcher"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/set_theme_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/set_theme"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:textColor="@color/white"
        android:background="@color/dark_gray"/>
</androidx.constraintlayout.motion.widget.MotionLayout>